update ppconfig from pakeplus

--- a/scripts/ppconfig.json
+++ b/scripts/ppconfig.json
@@ -1,147 +1,1 @@
-{
-    "name": "",
-    "url": "",
-    "showName": "",
-    "appid": "",
-    "icon": "",
-    "iconRound": true,
-    "state": true,
-    "single": true,
-    "injectJq": true,
-    "tauriApi": false,
-    "devbug": false,
-    "version": "0.0.1",
-    "platform": "desktop",
-    "width": 800,
-    "height": 600,
-    "desc": "",
-    "jsFile": [],
-    "filterCss": "",
-    "customJs": "",
-    "isHtml": false,
-    "htmlPath": "",
-    "htmlFiles": [],
-    "more": {
-        "windows": {
-            "label": "",
-            "title": "",
-            "url": "",
-            "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36",
-            "width": 800,
-            "height": 600,
-            "theme": null,
-            "resizable": true,
-            "fullscreen": false,
-            "maximized": false,
-            "minWidth": 400,
-            "minHeight": 300,
-            "maxWidth": 1920,
-            "maxHeight": 1080,
-            "decorations": true,
-            "transparent": false,
-            "titleBarStyle": "Visible",
-            "visible": true,
-            "focus": true,
-            "closable": true,
-            "minimizable": true,
-            "maximizable": true,
-            "alwaysOnTop": false,
-            "alwaysOnBottom": false,
-            "center": false,
-            "skipTaskbar": false,
-            "tabbingIdentifier": null,
-            "parent": null,
-            "dragDropEnabled": true,
-            "browserExtensionsEnabled": false,
-            "devtools": true,
-            "contentProtected": false,
-            "hiddenTitle": false,
-            "incognito": false,
-            "proxyUrl": null,
-            "useHttpsScheme": false,
-            "zoomHotkeysEnabled": false,
-            "acceptFirstMouse": false,
-            "create": false
-        }
-    },
-    "phone": {
-        "safeArea": {
-            "top": 0,
-            "bottom": 0,
-            "left": 0,
-            "right": 0
-        },
-        "header": {
-            "show": false,
-            "title": "",
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "loading": false,
-            "toolBar": false,
-            "toolBarBackgroundColor": "",
-            "toolBarColor": "",
-            "toolBarFontSize": 16,
-            "toolBarFontWeight": "bold"
-        },
-        "siderMenu": {
-            "show": false,
-            "width": 0,
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "title": "",
-            "titleColor": "",
-            "titleFontSize": 16,
-            "titleFontWeight": "bold"
-        },
-        "tabBar": {
-            "show": false,
-            "backgroundColor": "",
-            "color": "",
-            "activeColor": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "tabBarItem": []
-        }
-    },
-    "ios": {
-        "name": "",
-        "appid": "",
-        "icon": ""
-    },
-    "android": {
-        "name": "PakePlus",
-        "showName": "Pake Plus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "icon": "./app-icon.png",
-        "input": "./app-icon.png",
-        "output": "./res",
-        "rounded": true,
-        "copyTo": "./app/src/main/res",
-        "androidResDir": "./app/src/main/res",
-        "pubBody": "PakePlus PubBody"
-    },
-    "desktop": {
-        "name": "PakePlus2",
-        "showName": "oaikes",
-        "version": "0.0.2",
-        "id": "com.oaikes.app",
-        "tauriApi": true,
-        "desc": "PakePlus Desc2",
-        "debug": true,
-        "webUrl": "https://juejin.cn/",
-        "iconPath": "../app-icon.png",
-        "inputPath": "../app-icon.png",
-        "tempPath": "./processed-image.png",
-        "icnsPath": "../src-tauri/icons/icon.icns",
-        "pubBody": "PakePlus PubBody",
-        "isHtml": false,
-        "single": true,
-        "state": true,
-        "injectJq": true
-    }
-}
+{"message":"Not Found","documentation_url":"https://docs.github.com/rest/git/refs#get-all-references-in-a-namespace","status":"404","name":"diandutong","url":"https://web-1253563350.cos-website.ap-guangzhou.myqcloud.com/source/ddt/index.html","showName":"同步点读","appid":"com.ddt","icon":"","iconRound":true,"state":true,"single":true,"injectJq":true,"tauriApi":false,"devbug":false,"version":"1.0.0","preview":"desktop","platform":["1-1","1-2","2-1","2-2","3-1","3-2"],"width":800,"height":600,"desc":"","jsFile":[],"filterCss":"","customJs":"function execute() {\n    document.title = \"课本点读-点读通\";\n\n    // 隐藏 .nav-item\n    var navItem = document.querySelector('.nav-item');\n    if (navItem) {\n        navItem.style.display = 'none';\n    }\n\n    // 隐藏 .copyright\n    var copyright = document.querySelector('.copyright');\n    if (copyright) {\n        copyright.style.display = 'none';\n    }\n\n    //修改hotspot-box样式\n    const boxs = document.querySelectorAll('.hotspot-box');\n    boxs.forEach(box => {\n        box.style.border = '0px';\n        box.style.backgroundColor = 'rgba(0, 0, 0, 0)';\n    });\n\n    //修改hotspot-box-hover样式\n    // 动态添加 CSS 类定义\n    const style = document.createElement('style');\n    style.innerHTML = `\n    .hotspot-box-hover {\n    \tborder:1px solid !important;\n        background-color: rgba(0, 255, 0, 0.2) !important;\n        border-color: rgba(0, 255, 0, 0.4) !important;\n        box-shadow : 0 0 10px rgba(0, 255, 0, 0.5) !important;\n    }\n    .hotspot-box-hover {\n    \tborder:1px solid !important;\n        background-color: rgba(0, 0, 0, 0) !important;\n        border-color: rgba(0, 255, 0, 0.4) !important;\n        box-shadow : 0 0 10px rgba(0, 255, 0, 0.5) !important;\n    }\n    `;\n    document.head.appendChild(style);\n\n    // 绑定事件\n    document.querySelectorAll('.hotspot-box').forEach(box => {\n        box.addEventListener('mouseenter', () => {\n            box.classList.add('hotspot-box-hover');\n        });\n        box.addEventListener('mouseleave', () => {\n            box.classList.remove('hotspot-box-hover');\n        });\n    });\n\n    //将'完全免费使用'改为'课本同步使用'\n    document.querySelectorAll('div.book-publisher').forEach(function(div) {\n        if (div.textContent.trim() === '完全免费使用') {\n            div.textContent = '课本同步使用';\n        }\n    });\n\n}\n\nfunction doInterval() {\n    let time = 1;\n    const intervalId = setInterval(() => {\n        execute();\n        time++;\n\n        // 当执行次数超过500次（约5秒，因为每10ms执行一次）\n        if (time > 500) {\n            clearInterval(intervalId);\n            console.log(\"定时器已清除，共执行了\", time, \"次\");\n        }\n    }, 10);\n\n}\n\ndoInterval();\n\n\n//检测窗口变化\nwindow.addEventListener('resize', () => {\n    doInterval()\n});\n\n\n// 等待页面加载完成\ndocument.addEventListener('DOMContentLoaded', function() {\n    mySet();\n});\n\nfunction mySet() {\n    const target = document.getElementById('directoryOverlay');\n    if (!target) {\n        console.warn('未找到 id=\"directoryOverlay\" 的元素');\n        return;\n    }\n\n    // 读取 localStorage 中的翻译状态\n    let name = '翻译隐藏';\n    const translation = localStorage.getItem('translation'); // 0: 隐藏, 1: 显示\n    if (translation === '0') {\n        name = '翻译显示';\n    }\n\n    // 插入设置面板\n    target.insertAdjacentHTML('afterend', `\n        <div class=\"directory-overlay\" id=\"setOverlay\" style=\"display: none;\">\n            <div class=\"directory-container\">\n                <div class=\"directory-title\">设置</div>\n                <ul class=\"directory-list\">\n                    <li class=\"directory-item\" onclick=\"window.location.href='index.php'\">到达首页</li>\n                    <li class=\"directory-item\" onclick=\"translationSet()\">${name}</li>                       \n                </ul>\n            </div>\n        </div>\n    `);\n\n    // ✅ 将函数挂载到 window 上，使其可在 HTML 中调用\n    window.showSet = function() {\n        document.getElementById('setOverlay').style.display = 'block';\n    };\n\n    window.hideSet = function() {\n        document.getElementById('setOverlay').style.display = 'none';\n    };\n\n    window.translationSet = function() {\n        const current = localStorage.getItem('translation');\n        // 切换状态：0 → 1，1 → 0，null → 0\n        const next = current === '0' ? '1' : '0';\n        localStorage.setItem('translation', next);\n\n        // 更新按钮文字\n        const item = document.querySelector('#setOverlay .directory-item[onclick=\"translationSet()\"]');\n        item.textContent = next === '0' ? '翻译显示' : '翻译隐藏';\n\n        hideSet(); // 关闭设置面板\n    };\n\n    // ✅ 修改 header 按钮点击事件\n    const firstButton = document.querySelector('.header .header-btn');\n    if (firstButton) {\n        firstButton.innerHTML = '设置';\n        firstButton.onclick = function(e) {\n            e.preventDefault();\n            showSet();\n        };\n    }\n\n    // ✅ 点击遮罩层关闭（排除内部容器）\n    const setOverlay = document.getElementById('setOverlay');\n    setOverlay.addEventListener('click', function(e) {\n        // 只有点击遮罩层本身（非内部容器）才关闭\n        if (e.target === setOverlay) {\n            hideSet();\n        }\n    });\n\n    // 覆盖翻译功能\n    window.showTranslation = function(text) {\n        if (!text || '-' == text) return;\n        const translationBox = document.getElementById('translationBox');\n        translationBox.textContent = text;\n        const current = localStorage.getItem('translation');\n        translationBox.style.display = current === '0' ? 'none' : 'block';\n        // 点击翻译框隐藏\n        translationBox.onclick = function() {\n            hideTranslation();\n        };\n    }\n}","isHtml":false,"htmlPath":"","htmlFiles":[],"more":{"windows":{"label":"diandutong","title":"同步点读","url":"https://web-1253563350.cos-website.ap-guangzhou.myqcloud.com/source/ddt/index.html","userAgent":"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36","width":800,"height":600,"theme":null,"resizable":true,"fullscreen":false,"maximized":false,"minWidth":400,"minHeight":300,"maxWidth":1920,"maxHeight":1080,"decorations":true,"transparent":false,"titleBarStyle":"Visible","visible":true,"focus":true,"closable":true,"minimizable":true,"maximizable":true,"alwaysOnTop":false,"alwaysOnBottom":false,"center":true,"skipTaskbar":false,"tabbingIdentifier":null,"parent":null,"dragDropEnabled":true,"browserExtensionsEnabled":false,"devtools":true,"contentProtected":false,"hiddenTitle":false,"incognito":false,"proxyUrl":null,"useHttpsScheme":false,"zoomHotkeysEnabled":false,"acceptFirstMouse":false,"create":false}},"phone":{"safeArea":{"top":0,"bottom":0,"left":0,"right":0},"header":{"show":false,"title":"","backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","loading":false,"toolBar":false,"toolBarBackgroundColor":"","toolBarColor":"","toolBarFontSize":16,"toolBarFontWeight":"bold"},"siderMenu":{"show":false,"width":0,"backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","title":"","titleColor":"","titleFontSize":16,"titleFontWeight":"bold"},"tabBar":{"show":false,"backgroundColor":"","color":"","activeColor":"","fontSize":16,"fontWeight":"bold","tabBarItem":[]},"webview":{"userAgent":"","javaScriptEnabled":true,"domStorageEnabled":true,"allowFileAccess":true,"loadWithOverviewMode":true,"setSupportZoom":true,"clearCache":true}},"ios":{"name":"diandutong","showName":"同步点读","version":"1.0.0","webUrl":"https://web-1253563350.cos-website.ap-guangzhou.myqcloud.com/source/ddt/index.html","id":"com.ddt.ios","icon":"./app-icon.png","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","isHtml":false,"debug":false},"android":{"name":"diandutong","showName":"同步点读","version":"1.0.0","webUrl":"https://web-1253563350.cos-website.ap-guangzhou.myqcloud.com/source/ddt/index.html","id":"com.ddt.android","icon":"./app-icon.png","input":"./app-icon.png","output":"./res","rounded":true,"copyTo":"./app/src/main/res","androidResDir":"./app/src/main/res","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","isHtml":false,"debug":false},"desktop":{"name":"diandutong","showName":"同步点读","version":"1.0.0","id":"com.ddt.desktop","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）","webUrl":"https://web-1253563350.cos-website.ap-guangzhou.myqcloud.com/source/ddt/index.html","iconPath":"../app-icon.png","inputPath":"../app-icon.png","tempPath":"./processed-image.png","icnsPath":"../src-tauri/icons/icon.icns","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）","isHtml":false,"single":true,"state":true,"injectJq":false,"tauriApi":false,"buildMethod":"cloud","debug":false}}
